kompose/broker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/irrigate-irrigate: "true"
    io.kompose.service: broker
  name: broker
spec:
  containers:
    - image: irrigate-broker:latest
      name: broker
      ports:
        - containerPort: 1883
      resources: {}
  hostname: broker
  restartPolicy: OnFailure
status: {}
