kompose/garden-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/irrigate-irrigate: "true"
    io.kompose.service: garden
  name: garden
spec:
  containers:
    - image: irrigate-garden:latest
      name: garden
      resources: {}
  hostname: garden
  restartPolicy: OnFailure
status: {}
