kompose/monitor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/irrigate-irrigate: "true"
    io.kompose.service: monitor
  name: monitor
spec:
  containers:
    - image: irrigate-monitor:latest
      name: monitor
      resources: {}
  hostname: monitor
  restartPolicy: OnFailure
status: {}
