kompose/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/irrigate-irrigate: "true"
    io.kompose.service: redis
  name: redis
spec:
  containers:
    - args:
        - redis-server
        - --requirepass
        - mypassword
        - --port
        - "6379"
      image: redis:latest
      name: redis
      ports:
        - containerPort: 6379
      resources: {}
      volumeMounts:
        - mountPath: /data
          name: redis-claim0
  hostname: redis
  restartPolicy: OnFailure
  volumes:
    - name: redis-claim0
      persistentVolumeClaim:
        claimName: redis-claim0
status: {}
