kompose/webapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/irrigate-irrigate: "true"
    io.kompose.service: webapp
  name: webapp
spec:
  containers:
    - image: irrigate-webapp:latest
      name: webapp
      ports:
        - containerPort: 9080
      resources: {}
  hostname: webapp
  restartPolicy: OnFailure
status: {}
