kompose/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
  selector:
    io.kompose.service: broker
status:
  loadBalancer: {}
