kompose/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kompose
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  ports:
    - name: "9080"
      port: 9080
      targetPort: 9080
  selector:
    io.kompose.service: webapp
status:
  loadBalancer: {}
