kompose/irrigate-irrigate-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: irrigate-irrigate
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/irrigate-irrigate: "true"
  podSelector:
    matchLabels:
      io.kompose.network/irrigate-irrigate: "true"
